[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Nic11371 <nic11371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
